--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -9,10 +9,10 @@
     <form [formGroup]="loginForm" (submit)="login()" class="space-y-6" action="#" method="POST">
       <div>
         <label class="block text-sm font-medium leading-6 text-gray-900" for="email">E-mail</label>
-        <input formControlName="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+        <input formControlName="email" autocomplete="email" required class="p-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
         <app-email-validation [emailControl]="loginForm.get('email')" [isSubmitted]="isSubmitted"></app-email-validation>
         <label class="block text-sm font-medium leading-6 text-gray-900" for="password">Password</label>
-        <input formControlName="password" autocomplete="current-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+        <input formControlName="password" autocomplete="current-password" required class="p-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" type="password" />
         <app-password-validation [passwordControl]="loginForm.get('password')" [isSubmitted]="isSubmitted"></app-password-validation>
       </div>
 
