--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -9,19 +9,19 @@
     <form [formGroup]="registerForm" (submit)="register()" class="space-y-6" action="#" method="POST">
       <div>
         <label class="block text-sm font-medium leading-6 text-gray-900" for="username">Username</label>
-        <input formControlName="name" autocomplete="username" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+        <input formControlName="name" autocomplete="username" required class="p-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
         <app-username-validation [usernameControl]="registerForm.get('name')" [isSubmitted]="isSubmitted"></app-username-validation>
 
         <label class="block text-sm font-medium leading-6 text-gray-900" for="email">E-mail</label>
-        <input formControlName="email" autocomplete="email" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+        <input formControlName="email" autocomplete="email" required class=" p-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
         <app-email-validation [emailControl]="registerForm.get('email')" [isSubmitted]="isSubmitted"></app-email-validation>
 
         <label class="block text-sm font-medium leading-6 text-gray-900" for="password">Password</label>
-        <input formControlName="password" type="password" autocomplete="new-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+        <input formControlName="password" type="password" autocomplete="new-password" required class=" p-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" type="password" />
         <app-password-validation [passwordControl]="registerForm.get('password')" [isSubmitted]="isSubmitted"></app-password-validation>
 
         <label class="block text-sm font-medium leading-6 text-gray-900" for="confirmPassword">Confirm Password</label>
-        <input formControlName="confirmPassword" type="password" autocomplete="new-password" required class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+        <input formControlName="confirmPassword" type="password" autocomplete="new-password" required class=" p-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" type="password" />
         <app-repeat-password-validation [repeatPassControl]="registerForm.get('confirmPassword')" [isSubmitted]="isSubmitted"></app-repeat-password-validation>
       </div>
 
