Implemented article creation; validation pending
- Added functionality to create new articles.
- Integrated article creation into the application workflow.
- Note: Validation for article creation is still pending and will be addressed in future commits.
- Fixed minor bugs and made improvements to overall stability.

--- a/src/app/pages/articles/components/article/article.component.html
+++ b/src/app/pages/articles/components/article/article.component.html
@@ -6,7 +6,7 @@
       </a>
     </h1>
     <p class="text-sm sm:text-base text-grey-darker mt-2 sm:mt-0">
-      {{ date }}
+      {{ date | date:'dd/MM/yyyy'  }}
     </p>
   </header>
   <!-- <footer class="flex flex-col sm:flex-row items-center justify-between leading-none p-2 md:p-4">
