--- a/src/app/pages/articles/components/article-nav/article-nav.component.html
+++ b/src/app/pages/articles/components/article-nav/article-nav.component.html
@@ -24,22 +24,22 @@
       <!-- Menu items -->
       <div class="hidden sm:ml-6 sm:block">
         <div class="flex space-x-4">
-          <a routerLink="/" routerLinkActive="bg-gray-900 text-white" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white" aria-current="page">Dashboard</a>
+          <a routerLink="/" routerLinkActive="bg-gray-900 text-white" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white" aria-current="page" routerLink="../">Dashboard</a>
 
         </div>
       </div>
 
-      <!-- Notifications button and profile dropdown -->
+      <!-- add new article -->
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-        <button title="Add New" class="group cursor-pointer outline-none hover:rotate-90 duration-300">
-          <svg xmlns="http://www.w3.org/2000/svg" width="30px" height="30px" viewBox="0 0 24 24" class="stroke-red-400 fill-none group-hover:fill-red-800 group-active:stroke-red-200 group-active:fill-red-600 group-active:duration-0 duration-300">
-            <path d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z" stroke-width="1.5"></path>
-            <path d="M8 12H16" stroke-width="1.5"></path>
-            <path d="M12 16V8" stroke-width="1.5"></path>
-          </svg>
-        </button>
+    <button title="Add New" class="group cursor-pointer outline-none hover:rotate-90 duration-300" [routerLink]="['../create']">
+      <svg xmlns="http://www.w3.org/2000/svg" width="30px" height="30px" viewBox="0 0 24 24" class="stroke-red-400 fill-none group-hover:fill-red-800 group-active:stroke-red-200 group-active:fill-red-600 group-active:duration-0 duration-300">
+        <path d="M12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22Z" stroke-width="1.5"></path>
+        <path d="M8 12H16" stroke-width="1.5"></path>
+        <path d="M12 16V8" stroke-width="1.5"></path>
+      </svg>
+    </button>
 
-        <!-- Profile dropdown -->
+      
         <div class="relative ml-3">
           <button class="Btn">
 
