--- a/src/app/pages/articles/components/article/article.component.html
+++ b/src/app/pages/articles/components/article/article.component.html
@@ -1,24 +1,26 @@
-<article class="overflow-hidden rounded-lg shadow-lg hover:bg-gray-300 transition duration-300 ease-in-out">
-  <header class="flex flex-col sm:flex-row items-center justify-between leading-tight p-2 md:p-4">
-    <h1 class="text-lg sm:text-xl">
-      <a class="no-underline hover:underline text-black" >
-        {{ title }}
-      </a>
-    </h1>
-    <p class="text-sm sm:text-base text-grey-darker mt-2 sm:mt-0">
-      {{ date | date:'dd/MM/yyyy'  }}
-    </p>
-  </header>
-  <!-- <footer class="flex flex-col sm:flex-row items-center justify-between leading-none p-2 md:p-4">
-    <a class="flex items-center no-underline hover:underline text-black mb-2 sm:mb-0">
-      <p class="ml-2 text-sm sm:text-base">
-        {{ author }}
+<article class="max-w-md mx-auto overflow-hidden rounded-lg shadow-lg hover:bg-gray-100 transition duration-300 ease-in-out">
+  <header class="bg-slate-400 shadow">
+    <div class="px-4 py-2">
+      <h1 class="text-lg sm:text-xl font-semibold">
+        <a class="no-underline hover:underline text-black text-base">
+          {{ title }}
+        </a>
+      </h1>
+      <p class="text-xs sm:text-base text-gray-500 mt-2 ">
+        {{ date | date:'dd/MM/yyyy' }}
       </p>
-    </a> -->
-    <!-- Like button remains unchanged -->
-    <!-- <a class="no-underline text-grey-darker hover:text-red-dark inline-flex items-center">
-      <span class="hidden">Like</span>
-      <i class="fa fa-heart mr-2"></i>
-    </a> -->
-  <!-- </footer> -->
+    </div>
+  </header>
+  <!-- <footer class="bg-white shadow">
+    <div class="px-4 py-2">
+      <a class="inline-flex items-center no-underline hover:underline text-gray-800">
+        <span>Likes</span>
+        <i class="fas fa-heart ml-2"></i>
+      </a>
+      <a class="block mt-2 text-sm sm:text-base text-gray-600">
+        <span class="font-medium">
+          {{ author }}</span>
+      </a>
+    </div>
+  </footer> -->
 </article>
