--- a/src/app/pages/articles/components/articles-detail/articles-detail.component.html
+++ b/src/app/pages/articles/components/articles-detail/articles-detail.component.html
@@ -1,31 +1,22 @@
-<div class="max-w-md mx-auto p-7 overflow-hidden rounded-lg shadow-lg dark:bg-gray-700 dark:text-gray-200 h-[70vh] mt-5 ">
+<div class="max-w-md mx-auto p-7 overflow-hidden rounded-lg shadow-xl dark:bg-gray-900 dark:text-gray-300 h-[70vh] mt-5 space-y-4">
   <!-- Centering Wrapper -->
   <div class="flex flex-col items-center justify-center h-full bg-white dark:bg-gray-800">
-    <article class="w-full max-w-md bg-white dark:bg-gray-800 rounded-lg shadow-lg p-6">
-      <h2 class="text-2xl font-bold mb-4 dark:text-gray-100">
+    <article class="w-full max-w-md bg-white dark:bg-gray-800 rounded-lg shadow-xl p-6 space-y-4">
+      <h2 class="text-3xl font-bold mb-4 dark:text-gray-100">
         {{articleData.title}}
       </h2>
       <p class="text-gray-700 dark:text-gray-400">
         {{ articleData.content }}
       </p>
-     
-       
-          <h3 class="text-sm font-medium mb-2 dark:text-gray-300">
-            {{ articleData.authorDetails.name }}
-          </h3>
-          <p class="text-base text-gray-500 dark:text-gray-300">
-            {{ articleData.date  }}
-          </p>
-       
-      <div *ngIf="articleData.author == currentUserId">
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
-          Edit
-        </button>
-        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ml-2">
-          Delete
-        </button>
-      </div>
 
+      <div class="flex flex-col items-start space-y-2">
+        <h3 class="text-xl font-semibold dark:text-gray-300">
+          {{ articleData.authorDetails.name }}
+        </h3>
+        <p class="text-base text-gray-500 dark:text-gray-300">
+          {{ articleData.date | date:'dd/MM/yyyy' }}
+        </p>
+      </div>
     </article>
   </div>
 </div>
