--- a/src/app/pages/articles/components/article/article.component.html
+++ b/src/app/pages/articles/components/article/article.component.html
@@ -1,26 +1,53 @@
-<article class="max-w-md mx-auto overflow-hidden rounded-lg shadow-lg hover:bg-gray-100 transition duration-300 ease-in-out">
-  <header class="bg-slate-400 shadow">
-    <div class="px-4 py-2">
-      <h1 class="text-lg sm:text-xl font-semibold">
-        <a class="no-underline hover:underline text-black text-base">
-          {{ title }}
-        </a>
-      </h1>
-      <p class="text-xs sm:text-base text-gray-500 mt-2 ">
+<div class="max-w-md mx-auto w-full lg:max-w-lg flex flex-col lg:flex-row">
+  <div class="h-48 lg:h-64 w-full lg:w-2/5 bg-cover rounded-t lg:rounded-t-none lg:rounded-l text-center overflow-hidden" style="background-image: url('https://picsum.photos/200/300')" title="{{ title }}">
+  </div>
+  <div class="w-full lg:w-3/5 border-r border-b border-l border-grey-light lg:border-l-0 lg:border-t lg:border-grey-light bg-white rounded-b lg:rounded-b-none lg:rounded-r p-4 flex flex-col justify-between leading-normal hover:bg-gray-100 transition duration-300 ease-in-out">
+    <div class="mb-8">
+      <!-- Article Title -->
+      <div class="text-black font-bold text-lg mb-2 w-auto max-w-xs whitespace-nowrap overflow-hidden text-ellipsis">
+        {{ title }}
+      </div>
+      <!-- Article Date -->
+      <p class="text-sm text-grey-dark flex items-center">
+        <svg class="text-grey w-3 h-3 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+          <path d="M4 8V6a6 6 0 1 1 12 0v2h1a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-8c0-1.1.9-2 2-2h1zm5 6.73V17h2v-2.27a2 2 0 1 0-2 0zM7 6v2h6V6a3 3 0 0 0-6 0z" />
+        </svg>
+        Published on
         {{ date | date:'dd/MM/yyyy' }}
       </p>
+      <!-- Article Content -->
+      <!-- <p *ngIf="showFullContent || showFullContent" class="text-grey-darker text-base">
+        {{ content }}
+      </p> -->
     </div>
-  </header>
-  <!-- <footer class="bg-white shadow">
-    <div class="px-4 py-2">
-      <a class="inline-flex items-center no-underline hover:underline text-gray-800">
-        <span>Likes</span>
-        <i class="fas fa-heart ml-2"></i>
-      </a>
-      <a class="block mt-2 text-sm sm:text-base text-gray-600">
-        <span class="font-medium">
-          {{ author }}</span>
-      </a>
-    </div>
-  </footer> -->
-</article>
+    <!-- Show More Button -->
+    <button class="readmore-btn w-full lg:w-20 h-10 m-2 px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-700" (click)="toggleContent()">
+      <span class="book-wrapper">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="rgb(86, 69, 117)" viewBox="0 0 126 75" class="book">
+              <rect stroke-width="3" stroke="#fff" rx="7.5" height="70" width="121" y="2.5" x="2.5"></rect>
+              <line stroke-width="3" stroke="#fff" y2="75" x2="63.5" x1="63.5"></line>
+              <path stroke-linecap="round" stroke-width="4" stroke="#fff" d="M25 20H50"></path>
+              <path stroke-linecap="round" stroke-width="4" stroke="#fff" d="M101 20H76"></path>
+              <path stroke-linecap="round" stroke-width="4" stroke="#fff" d="M16 30L50 30"></path>
+              <path stroke-linecap="round" stroke-width="4" stroke="#fff" d="M110 30L76 30"></path>
+            </svg>
+      </span>
+
+<span class="text font-bold text-5px">Read more</span>
+</button>
+<!-- Full Content (Hidden initially) -->
+<div *ngIf="showFullContent" class="mt-4">
+  <p class="text-grey-darker text-base">
+    {{ content }}
+  </p>
+</div>
+<!-- Author Information -->
+<div class="flex items-center mt-4">
+  <img class="w-10 h-10 rounded-full mr-4" src="https://picsum.photos/200" alt="Author Avatar">
+  <div class="text-sm">
+    <p class="text-black leading-none">Author Name</p>
+    <p class="text-grey-dark">Date Published</p>
+  </div>
+</div>
+</div>
+</div>
